trunk/Archive/2582fb9ce8fe81fb40c3f84c76ff527b-78af1489b09c6514c070d1f877502981/output
+ clang -std=c++11 -O2 -Wall -pedantic main.cpp
main.cpp:7:38: error: array initializer must be an initializer list
    MyClass (const MyClass& other) : array (other.array) {}
                                     ^
1 error generated.
